<resources>
    <string name="app_name">Magic Mexican Fire</string>

    <string name="btn_next">button continue</string>
    <string name="text_exit"><u>Exit</u></string>

    <string name="btn_settings">btn_settings</string>
    <string name="button_games">button_games</string>

    <string name="button_game_first">KenoGame</string>
    <string name="button_game_second">FindPairGame</string>

    <string name="button_level_first">Level 1</string>
    <string name="button_level_second">Level 2</string>
    <string name="button_level_three">Level 3</string>

    <string name="text_title_settings">Settings</string>
    <string name="btn_music_on">btn_music_on</string>
    <string name="text_title_music">Music</string>
    <string name="btn_music_off">btn_music_off</string>
    <string name="text_title_vibro">Vibro</string>
    <string name="btn_vibro_on">btn_vibro_on</string>
    <string name="btn_vibro_off">btn_vibro_off</string>
    <string name="btn_reset_score">btn_reset_score</string>

    <string name="read_privacy_text"><u>Read</u></string>
    <string name="btn_accept">btn_accept</string>
    <string name="text_privacy">Privacy policy and terms</string>
    <string name="btn_claim">btn_claim</string>
    <string name="text_default_steps">0 steps</string>
    <string name="text_default_time">Time\n00:00</string>
    <string name="btn_high_score">btn_high_score</string>
    <string name="btn_change">btn_change</string>
    <string name="text_default_choice">Your choice\n1 12 16 32 34</string>
    <string name="text_default_choice_second">Your choice\n</string>
    <string name="text_default_win_combination"> 1  12    14\n8  28  32 </string>

    <string name="win_rate_level_first">0%</string>
    <string name="wins_level_first">0</string>
    <string name="time_level_first">00:00</string>
    <string name="find_pair_item">find pair item</string>
    <string name="default_number_keno">1</string>
    <string name="toast_win">Congratulations, you won!</string>
    <string name="toast_lose">Try again, you\'ve lost!</string>
    <string name="btn_privacy">btn_privacy</string>
    <string name="reset_message">Reset all High Score</string>
    <string name="sourcebanner">border banner</string>
    <string name="link_privacy">https://www.google.com</string>
    <string name="image_game">image_game</string>
    <string name="start">Start</string>

</resources>