<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_settings"
    tools:context=".view.settings.SettingsActivity">

    <TextView
        android:id="@+id/text_title_settings"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/galada"
        android:shadowColor="@color/white"
        android:shadowDx="-7"
        android:shadowDy="-7"
        android:shadowRadius="1"
        android:text="@string/text_title_settings"
        android:textAlignment="center"
        android:textColor="@color/green_black"
        android:textSize="@dimen/sp65"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_title_music"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/galada"
        android:shadowColor="@color/white"
        android:shadowDx="-7"
        android:shadowDy="-7"
        android:shadowRadius="1"
        android:text="@string/text_title_music"
        android:textAlignment="center"
        android:textColor="@color/green_black"
        android:textSize="@dimen/sp45"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_title_settings" />

    <ImageView
        android:id="@+id/button_music_on"
        android:layout_width="120dp"
        android:layout_height="90dp"
        android:layout_marginStart="50dp"
        android:background="@drawable/btn_music_on"
        android:clickable="true"
        android:contentDescription="@string/btn_music_on"
        android:focusable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_title_music" />

    <ImageView
        android:id="@+id/button_music_off"
        android:layout_width="120dp"
        android:layout_height="90dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/btn_music_off"
        android:clickable="true"
        android:contentDescription="@string/btn_music_off"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_title_music" />

    <TextView
        android:id="@+id/text_title_vibro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/galada"
        android:shadowColor="@color/white"
        android:shadowDx="-7"
        android:shadowDy="-7"
        android:shadowRadius="1"
        android:text="@string/text_title_vibro"
        android:textAlignment="center"
        android:textColor="@color/green_black"
        android:textSize="@dimen/sp45"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_music_off" />

    <ImageView
        android:id="@+id/button_vibro_on"
        android:layout_width="120dp"
        android:layout_height="90dp"
        android:layout_marginStart="50dp"
        android:background="@drawable/btn_vibro_on"
        android:clickable="true"
        android:contentDescription="@string/btn_vibro_on"
        android:focusable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_title_vibro" />

    <ImageView
        android:id="@+id/button_vibro_off"
        android:layout_width="120dp"
        android:layout_height="90dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/btn_vibro_off"
        android:clickable="true"
        android:contentDescription="@string/btn_vibro_off"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_title_vibro" />

    <ImageView
        android:id="@+id/button_reset_score"
        android:layout_width="300dp"
        android:layout_height="90dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/btn_reset_score"
        android:clickable="true"
        android:contentDescription="@string/btn_reset_score"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_vibro_off" />


</androidx.constraintlayout.widget.ConstraintLayout>