<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_menu"
    tools:context=".LevelsActivity">

    <ImageView
        android:id="@+id/button_level_first"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/btn_level_first"
        android:clickable="true"
        android:contentDescription="@string/button_level_first"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/button_level_second"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/btn_level_second"
        android:clickable="true"
        android:contentDescription="@string/button_level_second"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_level_first" />

    <ImageView
        android:id="@+id/button_level_three"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/btn_level_three"
        android:clickable="true"
        android:contentDescription="@string/button_level_three"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_level_second" />

    <TextView
        android:id="@+id/text_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/galada"
        android:text="@string/text_exit"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/sp35"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>