<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_menu"
    tools:context=".view.privacy.PrivacyActivity">

    <TextView
        android:id="@+id/text_privacy"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/galada"
        android:shadowColor="@color/white"
        android:shadowDx="-7"
        android:shadowDy="-7"
        android:shadowRadius="1"
        android:text="@string/text_privacy"
        android:textAlignment="center"
        android:textColor="@color/green_black"
        android:textSize="@dimen/sp55"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_privacy_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/galada"
        android:text="@string/read_privacy_text"
        android:textColor="@color/white"
        android:textSize="@dimen/sp35"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/btn_accept"
        android:layout_width="300dp"
        android:layout_height="90dp"
        android:background="@drawable/btn_accept"
        android:clickable="true"
        android:contentDescription="@string/btn_accept"
        android:focusable="true"
        app:layout_constraintBottom_toTopOf="@+id/text_privacy_link"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_privacy" />

</androidx.constraintlayout.widget.ConstraintLayout>